# ML-Teaching-Studio

./: LICENSE  ML-Teaching Studio.bat  ML-Teaching Studio.command  ML-Teaching Studio.desktop  ML-Teaching Studio.sh  README.md  pyproject.toml  requirements.txt
docs/examples/: workflows.md
docs/theory/: lesson_map.md
scripts/: launch_studio.py
src/ml_teaching_studio/: __init__.py  main.py
src/ml_teaching_studio/core/: __init__.py  datasets.py  explainers.py  hyperparameter_sweeps.py  interactive_examples.py  metrics.py  model_factory.py  preprocessing.py  run_store.py  trainers.py  validation.py
src/ml_teaching_studio/educational/: __init__.py  glossary.py  hyperparameter_help.py  lessons.py  model_help.py  quizzes.py
src/ml_teaching_studio/gui/: __init__.py  main_window.py
src/ml_teaching_studio/gui/dialogs/: __init__.py  data_import_dialog.py  interactive_plot_dialog.py  run_details_dialog.py
src/ml_teaching_studio/gui/pages/: __init__.py  about_page.py  (+10 more)
src/ml_teaching_studio/models/: __init__.py  classification.py  model_registry.py  neural_networks.py  regression.py
src/ml_teaching_studio/plotting/: __init__.py  classification_plots.py  comparison_plots.py  data_plots.py  hyperparameter_plots.py  interactive_plots.py  regression_plots.py
src/ml_teaching_studio/utils/: __init__.py  config.py  helpers.py  io.py  logging_utils.py
tests/: conftest.py  test_datasets.py  test_hyperparameter_sweeps.py  test_interactive_examples.py  test_metrics.py  test_model_factory.py  test_preprocessing.py  test_run_store.py  test_trainers.py  test_validation.py
(+9 files in other folders)
