[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-teaching-studio"
version = "1.0.0"
description = "Educational desktop lab for teaching machine learning concepts, models, and hyperparameters."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Tarik Akan"}]
dependencies = [
  "PySide6>=6.7",
  "numpy>=1.26",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "platformdirs>=4.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-qt>=4.4",
  "ruff>=0.6"
]

[project.scripts]
ml-teaching-studio = "ml_teaching_studio.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ml_teaching_studio*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py310"
